# basketball-betting-bot

./: .gitignore  .travis.yml  Cargo.toml  README.md  architecture.md  bot_commands.txt  bot_info.txt  db_setup  todos.txt
migrations/: 1_db_setup.sql
scheduled_tasks/: Cargo.toml
scheduled_tasks/src/: main.rs  scrape.rs
src/: lib.rs  main.rs  message_handling.rs  scrape.rs  states.rs  transitions.rs  utils.rs
