[package]
name = "scheduled_tasks"
version = "0.1.0"
authors = ["Johannes Schwarzbart <schwarzbartj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = {version="0.3.3", features = ["redis-storage", "bincode-serializer"]}
teloxide-macros = "0.3"

log = "0.4.8"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }

basketball_betting_bot = {path = "../../basketball-betting-bot"}
sqlx = {version = "0.4.1", features = ["postgres","time", "chrono","runtime-tokio-rustls", "bigdecimal"] }
chrono = "0.4.19"
anyhow = "1.0.36"
serde = "1.0.118"
chrono-tz = "0.5.3"
reqwest = "0.10.10"
scraper = "0.12.0"
select = "0.5.0"
